# Regent-CUDA-Reproducer

./: CMakeLists.txt  README.md  reproducer.cu  reproducer.rg  reproducer_q_derivatives.cu  reproducer_q_derivatives.rg
